# libsshtunnel

./: .gitignore  CMakeLists.txt  COPYING  README.md
.github/workflows/: ci.yml
cmake/Modules/: FindLibssh2.cmake
doc/architecture/decisions/: 0002-focus-on-a-small-minimal-api-instead-of-a-full-blown-one.md
include/: libsshtunnel.h
src/: libsshtunnel.c
test/: close-of-unused-tunnel.c
